# imu_calibrator

./: README.md
imu_calibrater/: CMakeLists.txt  README.md  package.xml
imu_calibrater/gui/: CalibrationWidget.cpp  CalibrationWidget.ui  IMUCalibrationWidget.cpp  IMUCalibrationWidget.h  xsense_mti_imu.launch
imu_calibrater/gui/imu_launch_file/: lsm6dox_imu.launch
imu_calibrater/launch/: gui_test.launch
imu_calibrater/src/: ArduinoToRos.cpp  imu_read_data.cpp  test_imu_calib.cpp
imu_calibration/: CMakeLists.txt  README.md  package.xml
imu_calibration/config/: CalibrationConfiguration_new_lsm.yaml  CalibrationConfiguration_old_lsm.yaml  CalibrationConfiguration_xsens.yaml
imu_calibration/include/imu_calibration/: imu_calibration.h  imu_filter_ros.h  imu_traj.h
imu_calibration/launch/: imu_calibration.launch  imu_calibration_2.launch
imu_calibration/src/: ArduinoToRos.cpp  imu_calibration.cpp  imu_calibration_node.cpp  imu_filter.cpp  imu_filter_ros.cpp  imu_traj.cpp  imu_traj_node.cpp
imu_msg/: CMakeLists.txt  package.xml
imu_msg/msg/: imu_custom_msg.msg
