<?xml version="1.0"?>
<package format="2">
	<name>imu_calibration</name>
	<version>0.0.0</version>
	<description>The imu_calibration package</description>

	<maintainer email="rmayur@todo.todo">rmayur</maintainer>


	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>tf2</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>imu_filter_madgwick</build_depend>
	<depend>imu_msg</depend>
	<exec_depend>message_runtime</exec_depend>


</package>