<?xml version="1.0"?>
<package format="2">
  <name>imu_msg</name>
  
  <author>Mayur Rabadiya</author>
	<license>BSD</license>

  <version>0.0.0</version>
  <description>The imu_msg package</description>

  <maintainer email="rmayur@campus.uni-paderborn.de">rmayur</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
	
  <exec_depend>message_runtime</exec_depend>

	<depend>std_msgs</depend>


</package>
